# scheduling-api

./: ..pre-commit-config.yaml  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/endpoints/: appointments.py  auth.py  services.py  tenants.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: appointment.py  availability.py  service.py  tenant.py  user.py
app/schemas/: appointment.py  availability.py  service.py  tenant.py  user.py
app/services/: appointment_service.py  service_service.py  tenant_service.py  user_service.py
migrations/: env.py
migrations/versions/: f7a9dcb47a33_create_services_availabilities_and_.py  feb099788565_create_tenants_and_users_tables.py
tests/: conftest.py  factories.py  test_appointments.py  test_auth.py  test_health.py  test_tenants.py
